--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .blinking-cursor {
+    @apply after:animate-[blink];
+  }
+  .hero-button {
+    @apply uppercase text-sm text-gray-400 px-6 py-2 rounded-full border border-[#282c34] 
+    tracking-widest transition-all hover:border-gray-600 hover:text-white
+  }
+}
+
