--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,16 @@
   .blinking-cursor {
     @apply after:animate-[blink];
   }
+
   .hero-button {
     @apply uppercase text-sm text-gray-400 px-6 py-2 rounded-full border border-[#282c34] 
-    tracking-widest transition-all hover:border-gray-600 hover:text-white
+    tracking-widest transition-all hover:border-gray-400 hover:text-white
+  }
+
+  .contact-input {
+    @apply outline-none bg-[#333842] text-gray-400 px-6 py-3 rounded-sm border-b
+    border-[#282c34] placeholder-gray-500 transition-all focus:border-gray-400
+    focus:text-white hover:border-gray-400
   }
 }
 
