--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,11 @@
   }
 
   .skill-icon-fade {
-    @apply opacity-100 hover:opacity-20 transition-opacity duration-300 ease-in-out
+    @apply opacity-90 group-hover:opacity-10 transition-opacity duration-300 ease-in-out
+  }
+  .skill-name-appear {
+    @apply absolute justify-center items-center opacity-0 group-hover:opacity-100
+    transition-opacity duration-300 ease-in-out
   }
 }
 
