--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
   .contact-input {
     @apply outline-none bg-[#333842] text-gray-400 px-6 py-3 rounded-sm border-b
-    border-[#282c34] placeholder-gray-500 transition-all focus:border-gray-400
+    border-[#333842] placeholder-gray-500 transition-all focus:border-gray-400
     focus:text-white hover:border-gray-400;
   }
 
