--- a/src/index.css
+++ b/src/index.css
@@ -4,27 +4,74 @@
 
 @layer components {
   .cursor-blink:after {
-    content: '|';
+    content: "|";
     @apply text-white;
     animation: blink 1s step-start infinite;
   }
-  
+
   @keyframes blink {
-    50% { opacity: 0; } 
+    50% {
+      opacity: 0;
+    }
+  }
+
+  .load-pfp {
+    @apply transition-all delay-500 ease-in-out;
+    animation: pfp-out-in 2s;
+  }
+
+  @keyframes pfp-out-in {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 0.5;
+      transform: scale(1.5);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .load-inner-circle {
+    @apply transition-all delay-500 ease-in-out;
+    animation: circle-out-in 2s forwards;
+  }
+
+  @keyframes circle-out-in {
+    0%,
+    100% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 0.5;
+      transform: scale(2);
+    }
+  }
+
+  .load-outer-circle {
+    @apply transition-all delay-300 ease-in-out;
+    animation: circle-out 1s forwards;
+  }
+
+  @keyframes circle-out {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 0.5;
+      transform: scale(2);
+    }
   }
 
   .hero-button {
-    @apply px-6 py-2
-    uppercase text-sm text-gray-400 font-mono tracking-widest hover:text-white
-    rounded-full border border-[#282c34] hover:border-gray-400
-    transition-all;
+    @apply rounded-full border border-[#282c34] px-6 py-2 font-mono text-sm uppercase 
+    tracking-widest text-gray-400 transition-all hover:border-gray-400 hover:text-white;
   }
 
   .contact-input {
-    @apply bg-[#333842] px-6 py-3 
-    text-gray-400 focus:text-white placeholder-gray-500
-    border-[#333842] outline-none rounded-sm border-b hover:border-gray-400 focus:border-gray-400
-    transition-all;
+    @apply rounded-sm border-b border-[#333842] bg-[#333842] px-6 py-3 text-gray-400 placeholder-gray-500 
+    outline-none transition-all hover:border-gray-400 focus:border-gray-400 focus:text-white;
   }
 
   .skill {
@@ -32,29 +79,31 @@
   }
 
   .skill-fade {
-    @apply opacity-90 group-hover:opacity-10 transition-opacity duration-300 ease-in-out;
-  }
-  
-  .skill-name {
-    @apply absolute justify-center items-center
-    opacity-0 group-hover:opacity-100
-    transition-opacity duration-300 ease-in-out;
+    @apply opacity-90 transition-opacity duration-300 ease-in-out group-hover:opacity-10;
   }
 
-  .skill-show {
+  .skill-name {
+    @apply absolute items-center justify-center opacity-0 transition-opacity duration-300 ease-in-out 
+    group-hover:opacity-100;
+  }
+
+  .bounce-show {
     @apply opacity-100 transition-all delay-300 duration-1000;
     animation: bounce-once 1s;
   }
 
   @keyframes bounce-once {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-50px); }
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-50px);
+    }
   }
 
   .highlighter {
-    @apply absolute bg-gray-500 z-0
-    bottom-0 left-0 w-full h-0.5 group-hover:h-full
-    origin-bottom transition-all duration-300 ease-in-out;
+    @apply absolute bottom-0 left-0 z-0 h-0.5 w-full origin-bottom bg-gray-500 transition-all duration-300 ease-in-out 
+    group-hover:h-full;
   }
 }
-
