--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,10 @@
     @apply h-[500px] w-[500px] animate-pulse md:h-[600px] md:w-[600px];
   }
 
+  .skill-text {
+    @apply text-center text-3xl font-semibold;
+  }
+
   .skill {
     @apply relative flex cursor-pointer opacity-0;
   }
@@ -112,9 +116,9 @@
   }
 
   .card {
-    @apply flex w-[500px] flex-shrink-0 snap-center flex-col items-center space-y-7 overflow-hidden 
+    @apply flex w-[350px] flex-shrink-0 snap-center flex-col items-center space-y-7 break-words
     rounded-lg bg-[#49505f] p-10 text-center opacity-40 transition-opacity duration-200
-    hover:opacity-100;
+    hover:opacity-100 md:w-[500px] xl:w-[900px];
   }
 
   .contact-input {
