--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@
   }
 
   .load-outer-circle {
-    @apply h-[250px] w-[250px] transition-all delay-300 ease-in-out md:h-[300px] md:w-[300px];
+    @apply h-[200px] w-[200px] transition-all delay-300 ease-in-out md:h-[275px] md:w-[275px];
     animation: circle-out 1s forwards;
   }
 
@@ -75,7 +75,7 @@
   }
 
   .pulse-circle {
-    @apply h-[500px] w-[500px] animate-pulse md:h-[600px] md:w-[600px];
+    @apply h-[400px] w-[400px] animate-pulse md:h-[550px] md:w-[550px];
   }
 
   .skill-text {
@@ -116,9 +116,9 @@
   }
 
   .card {
-    @apply flex w-[350px] flex-shrink-0 snap-center flex-col items-center space-y-7 break-words
-    rounded-lg bg-[#49505f] p-10 text-center opacity-40 transition-opacity duration-200
-    hover:opacity-100 md:w-[500px] xl:w-[900px];
+    @apply flex max-h-full w-[350px] flex-shrink-0 snap-center flex-col items-center space-y-7
+    break-words rounded-lg bg-[#49505f] p-10 text-center opacity-40 transition-opacity
+    duration-200 hover:opacity-100 md:w-[700px] xl:w-[900px];
   }
 
   .contact-input {
