--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@
 @tailwind utilities;
 
 @layer components {
+  /* Header */
   .header-button {
     @apply hidden px-1 text-lg uppercase tracking-[1px] text-gray-400 duration-300
     group-hover:-translate-y-1 group-hover:text-white md:inline-flex;
   }
 
+  /* START: Hero */
   .hero-button {
     @apply rounded-full border border-[#282c34] px-6 py-2 font-mono text-xs uppercase tracking-widest 
     text-gray-400 transition-all hover:border-gray-400 hover:text-white md:text-base;
@@ -77,7 +79,9 @@
   .pulse-circle {
     @apply h-[400px] w-[400px] animate-pulse md:h-[550px] md:w-[550px];
   }
+  /* END: Header */
 
+  /* START: Skills */
   .skill-text {
     @apply text-center text-3xl font-semibold;
   }
@@ -109,21 +113,25 @@
       transform: translateY(-50px);
     }
   }
+  /* END: Skills */
 
-  .highlighter {
-    @apply absolute bottom-0 left-0 z-0 h-0.5 w-full origin-bottom bg-gray-500 transition-all
-    duration-300 ease-in-out group-hover:h-full;
-  }
-
+  /* Experience */
   .card {
     @apply flex max-h-full w-[350px] flex-shrink-0 snap-center flex-col items-center space-y-7
     break-words rounded-lg bg-[#49505f] p-10 text-center opacity-40 transition-opacity
     duration-200 hover:opacity-100 md:w-[700px] xl:w-[900px];
   }
 
+  /* Contact */
   .contact-input {
     @apply rounded-md border-b border-[#333842] bg-[#333842] px-6 py-3 text-gray-400 
     placeholder-gray-500 outline-none transition-all hover:border-gray-400 focus:border-white
     focus:text-white;
+  }
+
+  /* About and Contact */
+  .highlighter {
+    @apply absolute bottom-0 left-0 z-0 h-0.5 w-full origin-bottom bg-gray-500 transition-all
+    duration-300 ease-in-out group-hover:h-full;
   }
 }
