--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,15 @@
 @layer components {
   /* Header */
   .header-button {
-    @apply hidden px-1 text-lg uppercase tracking-[1px] text-gray-400 duration-300
-    group-hover:-translate-y-1 group-hover:text-white md:inline-flex;
+    @apply px-1 sm:text-lg tracking-[1px] text-[#99d6ea] duration-300 hover:-translate-y-1 
+    hover:text-[#e1e7ec] inline-flex font-semibold;
   }
 
-  /* START: Hero */
-  .hero-button {
-    @apply rounded-full border border-[#282c34] px-6 py-2 font-mono text-xs uppercase tracking-widest 
-    text-gray-400 transition-all hover:border-gray-400 hover:text-white md:text-base;
+  .header-icon {
+    @apply px-1 duration-300 hover:-translate-y-1 hover:scale-110 text-[#99d6ea] hover:text-[#e1e7ec];
   }
 
+  /* Hero */
   .cursor-blink:after {
     content: "|";
     @apply text-white;
@@ -79,24 +78,22 @@
   .pulse-circle {
     @apply h-[400px] w-[400px] animate-pulse md:h-[550px] md:w-[550px];
   }
-  /* END: Header */
 
-  /* START: Skills */
-  .skill-text {
-    @apply text-center text-3xl font-semibold;
-  }
-
+  /* Skills */
   .skill {
-    @apply relative flex cursor-pointer opacity-0;
+    @apply opacity-0 flex items-center justify-center;
+  }
+  
+  .skill-text {
+    @apply flex items-center justify-center text-center text-lg md:text-3xl font-semibold text-[#fca6d1] break-all;
   }
 
   .skill-fade {
-    @apply opacity-90 transition-opacity duration-300 ease-in-out group-hover:opacity-10;
+    @apply flex items-center justify-center opacity-90 transition-colors duration-300 ease-in-out group-hover:opacity-10;
   }
 
   .skill-name {
-    @apply absolute items-center justify-center opacity-0 transition-opacity duration-300 ease-in-out 
-    group-hover:opacity-100;
+    @apply absolute opacity-0 transition-opacity duration-300 ease-in-out group-hover:opacity-100;
   }
 
   .bounce-show {
@@ -113,25 +110,24 @@
       transform: translateY(-50px);
     }
   }
-  /* END: Skills */
 
   /* Experience */
   .card {
-    @apply flex max-h-full w-[350px] flex-shrink-0 snap-center flex-col items-center space-y-7
-    break-words rounded-lg bg-[#49505f] p-10 text-center opacity-40 transition-opacity
-    duration-200 hover:opacity-100 md:w-[700px] xl:w-[900px];
+    @apply flex max-h-full w-[350px] flex-shrink-0 snap-center flex-col items-center space-y-7 
+    break-words rounded-lg bg-[#17182c] border border-[#17182c] p-10 text-center text-[#e1e7ec] transition-all duration-300 
+    hover:border-[#e1e7ec] md:w-[700px] xl:w-[900px];
   }
 
   /* Contact */
   .contact-input {
-    @apply rounded-md border-b border-[#333842] bg-[#333842] px-6 py-3 text-gray-400 
-    placeholder-gray-500 outline-none transition-all hover:border-gray-400 focus:border-white
-    focus:text-white;
+    @apply rounded-lg border-b border-[#17182c] bg-[#17182c] px-6 py-3 text-[#e1e7ec]
+  placeholder-[#e1e7ec]/70 outline-none transition-all hover:border-[#e1e7ec] focus:border-[#e1e7ec]
+  focus:text-[#e1e7ec];
   }
 
   /* About and Contact */
   .highlighter {
-    @apply absolute bottom-0 left-0 z-0 h-0.5 w-full origin-bottom bg-gray-500 transition-all
+    @apply absolute bottom-0 left-0 z-0 h-0.5 w-full origin-bottom bg-[#fca6d1] transition-all
     duration-300 ease-in-out group-hover:h-full;
   }
 }
