--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -130,7 +126,7 @@ html {
   focus:text-[#e1e7ec] w-full;
   }
 
-  /* About and Contact */
+  /* Misc */
   .highlighter {
     @apply absolute bottom-0 left-0 z-0 h-0.5 w-full origin-bottom bg-[#fca6d1] transition-all
     duration-300 ease-in-out group-hover:h-full;
