overall appearance changes

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+  ::root {
+    --scroll-behavior: smooth;
+  }
+}
+
 @layer components {
   /* Header */
   .header-button {
