--- a/src/index.css
+++ b/src/index.css
@@ -4,28 +4,165 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  @font-face {
-    font-family: 'Lexend Deca', monospace;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
-  }
+body,
+#root {
+  @apply font-lexend bg-primary text-secondary h-screen w-screen;
+}
 
-  body {
-    @apply bg-primary font-lexend text-secondary leading-loose h-screen w-screen overflow-x-hidden;
-  }
-
-  #root {
-    @apply flex flex-col w-full h-full justify-center;
-  }
+main {
+  height: calc(100vh - 100px);
 }
 
 @layer components {
-  /* Animations */
-  @keyframes show-profile {
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+
+  .flex-between {
+    @apply flex justify-between items-center;
+  }
+
+  section {
+    @apply flex-center m-auto h-full xl:max-w-6xl pb-10;
+  }
+
+  .header-container {
+    @apply opacity-0 transition-all duration-500 ease-out;
+  }
+
+  .button-container {
+    @apply flex-center w-full gap-2 bg-tertiary rounded-xl py-1;
+  }
+
+  .circle {
+    @apply absolute mx-auto rounded-full border border-accent-blue;
+  }
+
+  .button-nav {
+    @apply font-medium text-accent-blue active:text-accent-blue tracking-wider
+      hover:text-secondary hover:-translate-y-1 transition-200;
+  }
+
+  .button-icon {
+    @apply hover:-translate-y-1 hover:scale-110 transition-200;
+  }
+
+  .button-default {
+    @apply w-full rounded-padding 
+      text-accent-blue text-default font-medium tracking-wider
+      active:bg-accent-blue active:text-primary
+      hover:bg-secondary hover:text-primary transition-200;
+  }
+
+  .button-active {
+    @apply bg-accent-pink text-primary;
+  }
+
+  .shadow-transform {
+    @apply shadow-md hover:shadow-lg hover:-translate-y-1 hover:scale-105 transform transition-200;
+  }
+
+  .ul-grid {
+    @apply grid gap-4 lg:gap-6;
+  }
+
+  .li-container {
+    @apply relative flex-col flex-center py-5 lg:py-8 h-full 
+      rounded-xl bg-tertiary shadow-md
+      group-hover:scale-105 group-hover:shadow-lg transform transition-all;
+  }
+
+  .li-content {
+    @apply flex-col flex-center px-5 gap-2 text-accent-blue
+      group-hover:text-secondary transition-colors;
+  }
+
+  .li-popup {
+    @apply absolute bottom-full px-2 py-1 bg-secondary text-primary text-xs tracking-wide 
+      rounded opacity-0 group-hover:opacity-100 transition-opacity;
+  }
+
+  .sheet {
+    @apply fixed flex flex-col justify-start items-end
+      top-0 right-0 z-10 p-8 h-fit w-fit
+      text-secondary transition-transform duration-500 ease-in-out;
+  }
+
+  .sheet-bg {
+    @apply bg-primary/70 backdrop-blur-lg fixed inset-0 transition-200 ease-in z-0;
+  }
+
+  .project-container {
+    @apply container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:auto-rows-[18rem] max-h-full
+      gap-6 xl:max-w-5xl overflow-x-hidden overflow-y-scroll scroll-py-10 scroller-hidden hover:scroller;
+  }
+
+  .project-card {
+    @apply flex flex-col justify-between h-full gap-4 rounded-xl p-4 bg-tertiary shadow-transform;
+  }
+
+  .scroller-hidden {
+    @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-transparent transition-colors;
+  }
+
+  .scroller {
+    @apply scrollbar-thumb-accent-blue;
+  }
+
+  .input-contact {
+    @apply bg-tertiary rounded-padding placeholder-secondary/50 shadow-transform;
+  }
+
+  .cursor-blink:after {
+    content: '|';
+    @apply text-accent-pink;
+    animation: blink 1s step-start infinite;
+  }
+
+  .profile-decor {
+    @apply opacity-0 delay-1000 duration-300 ease-in;
+  }
+
+  .animate-profile {
+    @apply ease-in-out;
+    animation: fade-in 2s forwards;
+  }
+
+  .animate-inner-circle {
+    @apply h-[150px] w-[150px] ease-in-out;
+    animation: grow-shrink 2s forwards;
+  }
+
+  .animate-outer-circle {
+    @apply h-[200px] w-[200px] ease-in-out;
+    animation: grow-stay 1s forwards;
+  }
+
+  .animate-rotate-right {
+    animation: rotate-right 0.3s ease-in-out;
+  }
+}
+
+@layer utilities {
+  .text-default {
+    @apply text-sm md:text-base lg:text-lg;
+  }
+
+  .transition-200 {
+    @apply transition-all duration-200;
+  }
+
+  .rounded-padding {
+    @apply px-5 py-2 rounded-xl;
+  }
+
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
+
+  @keyframes fade-in {
     0% {
       opacity: 0;
     }
@@ -38,7 +175,7 @@
     }
   }
 
-  @keyframes scale-out-in {
+  @keyframes grow-shrink {
     0%,
     100% {
       opacity: 0;
@@ -49,7 +186,7 @@
     }
   }
 
-  @keyframes scale-out {
+  @keyframes grow-stay {
     from {
       opacity: 0;
     }
@@ -59,77 +196,13 @@
     }
   }
 
-  @keyframes blink {
-    50% {
-      opacity: 0;
-    }
-  }
-
   @keyframes rotate-right {
-    0% {
+    0%,
+    100% {
       transform: rotate(0deg);
     }
     50% {
       transform: rotate(30deg);
     }
-    100% {
-      transform: rotate(0deg);
-    }
-  }
-
-  /* Components */
-  .button-nav {
-    @apply font-semibold tracking-wider hover:-translate-y-1 transition-all duration-200;
-  }
-
-  .button-icon {
-    @apply hover:-translate-y-1 hover:scale-110 transition-all duration-200;
-  }
-
-  .button-page {
-    @apply rounded-xl px-5 py-2 text-sm md:text-base lg:text-lg font-medium tracking-wider -translate-y-1 active:translate-y-0 active:shadow-lg transform transition-all shadow-xl duration-200 active:bg-accent-blue active:text-primary hover:bg-secondary hover:text-primary;
-  }
-
-  .scroller {
-    @apply scrollbar-thin scrollbar-track-transparent transition-all;
-  }
-
-  .show-scroller {
-    @apply scrollbar-thumb-accent-blue;
-  }
-
-  .hide-scroller {
-    @apply scrollbar-thumb-transparent;
-  }
-
-  .animate-rotate-right {
-    animation: rotate-right 0.3s ease-in-out;
-  }
-
-  /* Home Page */
-  .animate-profile {
-    @apply ease-in-out;
-    animation: show-profile 2s forwards;
-  }
-
-  .animate-inner-circle {
-    @apply h-[150px] w-[150px] ease-in-out;
-    animation: scale-out-in 2s forwards;
-  }
-
-  .animate-outer-circle {
-    @apply h-[200px] w-[200px] ease-in-out;
-    animation: scale-out 1s forwards;
-  }
-
-  .cursor-blink:after {
-    content: '|';
-    @apply text-accent-pink;
-    animation: blink 1s step-start infinite;
-  }
-
-  /* Contact */
-  .contact-input {
-    @apply bg-tertiary px-5 py-2 rounded-xl placeholder-secondary/50 active:text-secondary shadow-md transform transition-all hover:shadow-xl hover:-translate-y-1 hover:scale-105;
   }
 }
